# AudioStreamPlayer

./: .gitignore  AudioStreamPlayerConfig.h.in  CMakeLists.txt  README.md
3rd/FFmpeg/include/libavutil/: ffversion.h
3rd/FFmpeg/lib/: libavcodec.so.58  libavdevice.so.58  libavdevice.so.58.11.103  libavfilter.so.7  libavfilter.so.7.94.100  libavformat.so.58  libavformat.so.58.65.100  libavutil.so.56  libavutil.so.56.62.100  libswresample.so.3  libswresample.so.3.8.100  libswscale.so.5  libswscale.so.5.8.100
3rd/FFmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
3rd/FFmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffprobe-all.1
3rd/apache-log4cxx-0.11.0/share/cmake/log4cxx/: log4cxxConfigVersion.cmake
3rd/apache-log4cxx-0.11.0/share/pkgconfig/: liblog4cxx.pc
app/: ASPLogImpl.cpp  ASPLogImpl.h  CMakeLists.txt  main.cpp
doc/: LocalAudioStreamPlayer.eddx
sdk/include/: ASPLog.h  Asplog.h  AudioStreamResampler.h
sdk/src/: Asplog.cpp  AudioStreamResampler.cpp  AudioStreamResampler.h  CMakeLists.txt
